[workspace]
members = [
#    "rig-dashscope",
    "rig-llm",
]
resolver = "2"

[workspace.dependencies]
rig-core = "0.32.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
futures = "0.3"
bytes = "1"
tracing = "0.1"
http = "1"
thiserror = "2"
reqwest = "0.13"
